notebook attacchi LNN_V2

--- a/Progetto/LNN_V2/Test_Attacks.ipynb
+++ b/Progetto/LNN_V2/Test_Attacks.ipynb
@@ -1,6 +1,58 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1da5f241",
+   "metadata": {},
+   "source": [
+    "# Analisi dei Risultati: Test di Robustezza su Modello LNN\n",
+    "\n",
+    "Questa sezione descrive la metodologia di testing avversario e l'interpretazione quantitativa delle performance del modello **LNN Autoencoder** nel rilevamento di anomalie marittime (AIS).\n",
+    "\n",
+    "### 1. Metodologia del Test\n",
+    "Il codice non si limita a validare il modello su un dataset statico, ma implementa una **pipeline di iniezione attiva** degli attacchi per valutare la sensibilità della rete a diverse tipologie di manipolazione cinematica.\n",
+    "\n",
+    "* **Generazione del Dataset:** Vengono caricati circa 15.000 batch di dati reali \"puliti\" (Normal).\n",
+    "* **Iniezione degli Attacchi:** Il dataset viene duplicato e manipolato sinteticamente per creare 4 scenari di minaccia distinti:\n",
+    "    1.  **Speed Spoofing:** Aggiunta di rumore gaussiano alla velocità (SOG).\n",
+    "    2.  **Teleport:** Spostamento istantaneo delle coordinate negli ultimi 5 step temporali.\n",
+    "    3.  **Ghost Ship:** Inversione di rotta (COG) combinata a jitter, simulando una manovra incoerente.\n",
+    "    4.  **Silent Drift:** Deriva posizionale progressiva e lineare (spoofing lento).\n",
+    "* **Criterio di Rilevamento:** Si utilizza l'Errore Medio Assoluto (MAE) di ricostruzione. La soglia di allarme è dinamica, calcolata statisticamente sulla distribuzione dell'errore dei dati normali nel test set:\n",
+    "    $$Threshold = \\mu_{norm} + 3\\sigma_{norm}$$\n",
+    "\n",
+    "### 2. Analisi Quantitativa dei Risultati\n",
+    "\n",
+    "L'esecuzione ha processato un totale di **960.000 campioni**, ottenendo una soglia operativa di **0.023947**.\n",
+    "\n",
+    "#### Metriche Globali\n",
+    "Il modello dimostra un'elevata capacità di generalizzazione con performance complessive molto solide:\n",
+    "* **Accuracy:** 97%\n",
+    "* **F1-Score (Classe Attack):** 0.98\n",
+    "* **Recall (Detection Rate):** 0.97\n",
+    "\n",
+    "#### Dettaglio per Scenario di Attacco\n",
+    "I tassi di rilevamento (Detection Rate) evidenziano come la LNN risponda alle diverse dinamiche fisiche:\n",
+    "\n",
+    "| Scenario | Rilevati / Totali | Rate | Analisi Tecnica |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| **Speed Spoofing** | 192k / 192k | **100.00%** | L'anomalia sulla velocità rompe drasticamente la continuità temporale appresa dalla LNN. Rilevamento immediato. |\n",
+    "| **Teleport** | 192k / 192k | **100.00%** | Il salto di coordinate genera un errore di ricostruzione massiccio (spike) nel layer di output. |\n",
+    "| **Silent Drift** | 192k / 192k | **100.00%** | Nonostante la deriva sia lenta, la LNN (grazie alla memoria delle ODE) rileva l'incoerenza tra la cinematica attesa e la posizione effettiva. |\n",
+    "| **Ghost Ship** | 166k / 192k | **86.75%** | **Punto Critico.** L'attacco agisce principalmente sul COG (rotta). Poiché la nave si muove comunque in modo \"fisicamente possibile\" (anche se errato), l'errore di ricostruzione è inferiore rispetto agli altri attacchi, portando a un 13% di Falsi Negativi che cadono sotto la soglia. |\n",
+    "\n",
+    "#### Falsi Positivi (FP)\n",
+    "Il tasso di **Falsi Positivi è dell'1.57%** (3011 campioni su 192.000 normali). Questo indica che la soglia ($3\\sigma$) è ben calibrata, ma esiste una piccola frazione di traffico legittimo con manovre complesse che il modello fatica a ricostruire perfettamente.\n",
+    "\n",
+    "### 3. Conclusioni Operative\n",
+    "Il grafico della distribuzione degli errori (istogramma finale) conferma visivamente i dati tabellari:\n",
+    "* Le distribuzioni di *Speed*, *Teleport* e *Drift* sono nettamente separate dalla zona normale (errore alto).\n",
+    "* La distribuzione *Ghost Ship* presenta una parziale sovrapposizione con la coda destra della distribuzione *Normal*, spiegando il calo di performance specifico per questa classe.\n",
+    "\n",
+    "Il sistema è **estremamente robusto** contro manipolazioni posizionali e di velocità, mentre mostra margini di miglioramento sulla discriminazione di anomalie pure di rotta (COG)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e8af9953",
@@ -340,6 +392,59 @@
     "plt.legend()\n",
     "plt.xlim(0, 0.2) # Focus sulla zona critica\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e98492",
+   "metadata": {},
+   "source": [
+    "# Analisi di Sensibilità Parametrica: Stress Test del Modello\n",
+    "\n",
+    "Questa sezione esamina i confini operativi del modello neurale sottoponendolo a perturbazioni di intensità crescente. L'obiettivo è identificare il **\"punto di rottura\"** (Break-point), ovvero il valore minimo di anomalia necessario affinché il sistema attivi un allarme (Detection Rate > 90-100%).\n",
+    "\n",
+    "### Metodologia del Test\n",
+    "Il test isola una singola variabile cinematica per volta, applicando una perturbazione progressiva ($P$) a un batch di campioni ($X$). Per ogni livello di intensità:\n",
+    "1.  Si genera il dataset avversario $X' = X + P$.\n",
+    "2.  Il modello calcola l'errore di ricostruzione (MAE).\n",
+    "3.  Si misura la percentuale di campioni in cui $MAE > Threshold$ ($0.023947$).\n",
+    "\n",
+    "### Analisi dei Risultati per Scenario\n",
+    "\n",
+    "#### 1. Teleport (Discontinuità Posizionale)\n",
+    "Questo test simula un salto improvviso nelle coordinate (Lat/Lon) negli ultimi 5 step temporali.\n",
+    "* **Risultato:** Il modello mostra una zona di incertezza tra 0.01 e 0.02 (valori normalizzati).\n",
+    "* **Analisi:**\n",
+    "    * Sotto **0.02**, lo spostamento viene spesso \"assorbito\" dal modello come rumore fisiologico o manovra rapida (Detection < 31.2%).\n",
+    "    * A **0.05**, la discontinuità diventa strutturale e il rilevamento scatta istantaneamente al **100%**.\n",
+    "    * **Conclusione:** Il sistema ha una tolleranza spaziale di circa 0.02-0.04 unità normalizzate prima di classificare un salto come impossibile.\n",
+    "\n",
+    "#### 2. Speed Spoofing (Rumore su SOG)\n",
+    "Iniezione di rumore gaussiano additivo sul canale della velocità (SOG).\n",
+    "* **Risultato:** Risposta binaria estremamente netta.\n",
+    "* **Analisi:**\n",
+    "    * Con rumore **0.1**, il sistema è incerto (43.8%).\n",
+    "    * Con rumore **0.2**, il sistema satura immediatamente al **100%** di rilevamento.\n",
+    "    * **Conclusione:** Il modello è altamente sensibile alle variazioni di velocità. L'architettura neurale ha appreso una forte correlazione tra la cinematica posizionale e il valore SOG riportato; una minima discrepanza (0.2) rompe questa coerenza.\n",
+    "\n",
+    "#### 3. Silent Drift (Deriva Cumulativa)\n",
+    "Applicazione di una deriva lineare costante ($drift\\_vector = t \\cdot rate$).\n",
+    "* **Risultato:** Sensibilità elevata grazie alla natura ricorrente della rete.\n",
+    "* **Analisi:**\n",
+    "    * Ratei infinitesimali (< 0.001) non generano errore sufficiente.\n",
+    "    * Il **Tipping Point** si trova a **0.003**. A questo rateo, l'errore cumulato sulla finestra temporale (30 step) diventa sufficiente a superare la soglia, garantendo il 100% di rilevamento.\n",
+    "    * **Conclusione:** Il modello integra efficacemente l'errore nel tempo. Anche se la deviazione istantanea è minima, la divergenza della traiettoria viene catturata correttamente.\n",
+    "\n",
+    "#### 4. Ghost Ship (Incoerenza Rotta/COG)\n",
+    "Simulazione di un'inversione di rotta ($\\approx 180^\\circ$) con aggiunta di jitter (tremolio).\n",
+    "* **Risultato:** **Vulnerabilità Critica rilevata.**\n",
+    "* **Analisi:**\n",
+    "    * A **Jitter 0.00** (inversione di rotta pulita), il detection rate è solo del **9.4%**. Il modello fallisce nel riconoscere che la nave sta andando nella direzione opposta rispetto al COG dichiarato, purché il movimento sia fluido.\n",
+    "    * Il rilevamento dipende linearmente dal **Jitter** (rumore ad alta frequenza). Serve un jitter di **0.20** per superare il 90% di affidabilità.\n",
+    "    * **Conclusione:** L'Autoencoder ricostruisce bene le traiettorie anche se il COG è invertito, finché sono \"lisce\". L'allarme scatta solo se l'attacco introduce instabilità (jitter) nel segnale, non per l'incoerenza semantica della direzione.\n",
+    "\n",
+    "### Sintesi Operativa\n",
+    "Il modello è robusto contro anomalie di velocità e posizione (Spoofing, Drift, Teleport), ma presenta un **blind-spot** significativo nell'attacco **Ghost Ship \"pulito\"**."
    ]
   },
   {
