completamento Test_Attacks

--- a/Progetto/LSMT_V2/Test_Attacks.ipynb
+++ b/Progetto/LSMT_V2/Test_Attacks.ipynb
@@ -1,8 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0074a930",
+   "metadata": {},
+   "source": [
+    "# Analisi dei Risultati: Test di Robustezza su Modello LSTM\n",
+    "\n",
+    "Questa sezione dettaglia le performance del modello LSTM (Long Short-Term Memory) in ambiente avversario, basandosi sui log di esecuzione forniti. L'analisi si concentra sulla capacità del modello di distinguere tra dinamiche di navigazione lecite e manipolazioni sintetiche dei dati AIS.\n",
+    "\n",
+    "### 1. Metodologia e Parametri\n",
+    "Il test è stato condotto su un dataset di **960.000 campioni** totali (15.000 batch), suddivisi tra traffico normale e 4 tipologie di attacco.\n",
+    "* **Soglia di Rilevamento:** Calcolata dinamicamente come $\\mu + 3\\sigma$ sui dati normali del test set. Il valore risultante è **0.027605**.\n",
+    "    * *Nota Tecnica:* Questa soglia è sensibilmente più alta rispetto a quella osservata nel test LNN ($\\approx 0.0239$). Ciò indica che l'LSTM ha una varianza di errore di ricostruzione maggiore sui dati normali (è intrinsecamente più \"rumorosa\" o meno precisa nel fitting della baseline normale), il che impatta la sensibilità verso anomalie sottili.\n",
+    "\n",
+    "### 2. Analisi Quantitativa Globale\n",
+    "\n",
+    "Il modello mostra buone capacità generali ma evidenzia limiti specifici rispetto alle architetture a tempo continuo (LNN).\n",
+    "\n",
+    "* **Accuracy:** $92\\%$ (Inferiore al $97\\%$ della LNN).\n",
+    "* **Recall (Detection Rate):** $0.90$. Questo significa che il $10\\%$ degli attacchi totali riesce a evadere il sistema (False Negatives).\n",
+    "* **Precision (Attack):** $1.00$. Quando il sistema segnala un attacco, è quasi certamente un attacco. I falsi positivi sono contenuti.\n",
+    "\n",
+    "### 3. Dettaglio per Scenario di Attacco\n",
+    "\n",
+    "L'analisi dei singoli scenari rivela una dicotomia netta nelle prestazioni: eccellente su anomalie cinematiche \"grezze\", carente su anomalie semantiche.\n",
+    "\n",
+    "| Scenario | Rilevati / Totali | Rate | Analisi Tecnica |\n",
+    "| :--- | :--- | :--- | :--- |\n",
+    "| **Speed Spoofing** | 192k / 192k | **100.00%** | La LSTM mantiene una memoria a lungo termine della velocità. L'iniezione di rumore sulla variabile SOG crea una discrepanza immediata rispetto alla sequenza attesa, portando l'errore ben oltre la soglia di $0.027$. |\n",
+    "| **Teleport** | 192k / 192k | **100.00%** | Il salto posizionale (discontinuità spaziale) rompe la fluidità della serie temporale. Le celle di memoria dell'LSTM non riescono a predire il salto, generando un picco di errore di ricostruzione. |\n",
+    "| **Silent Drift** | 192k / 192k | **100.00%** | Nonostante la deriva sia lenta, l'accumulo dell'errore sulla finestra temporale ($Window Size = 30$) è sufficiente per superare la soglia. L'LSTM dimostra di saper integrare l'errore nel tempo efficacemente. |\n",
+    "| **Ghost Ship** | 114k / 192k | **59.43%** | **Punto di Fallimento Critico.** Quasi il **40%** degli attacchi passa inosservato. Questo attacco inverte la rotta (COG). La scarsa performance suggerisce che l'LSTM fatica a correlare la variabile COG con il vettore di spostamento effettivo (Lat/Lon) quando il movimento rimane \"fluido\". Poiché la soglia è alta ($0.0276$), l'errore generato dall'incongruenza direzionale non è sufficiente a scatenare l'allarme. |\n",
+    "\n",
+    "### 4. Analisi dei Falsi Positivi\n",
+    "Il tasso di Falsi Positivi è dell'**1.54%** (2962 campioni).\n",
+    "Questo valore è statisticamente coerente con la definizione della soglia a $3\\sigma$ (che teoricamente copre il $99.7\\%$ di una distribuzione normale, lasciando fuori uno $0.3\\%$ fisiologico, più eventuali code lunghe reali). Il fatto che sia $1.5\\%$ indica che la distribuzione degli errori normali non è perfettamente gaussiana ma ha una coda destra leggermente pesante (alcune manovre normali sono complesse da ricostruire per l'LSTM).\n",
+    "\n",
+    "### 5. Conclusioni Comparative (LSTM vs LNN)\n",
+    "Confrontando questi risultati con quelli precedenti:\n",
+    "1.  **Robustezza:** Entrambi i modelli sono infallibili ($100\\%$) contro attacchi che violano palesemente la fisica (Teleport, Speed) o la coerenza posizionale nel tempo (Drift).\n",
+    "2.  **Sensibilità:** L'LSTM è significativamente meno sensibile della LNN nello scenario **Ghost Ship** ($59.43\\%$ vs $86.75\\%$).\n",
+    "    * *Causa Probabile:* La LNN, basata su equazioni differenziali ordinarie, modella meglio la derivata del movimento (velocità e direzione istantanea). L'LSTM, lavorando su step discreti, sembra \"accontentarsi\" di ricostruire una sequenza di valori numerici senza catturare pienamente la relazione causale tra Direzione (COG) e Spostamento, portando a un elevato numero di Falsi Negativi quando l'anomalia è puramente direzionale."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e8af9953",
    "metadata": {},
    "outputs": [
@@ -310,8 +354,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b0c7388",
+   "metadata": {},
+   "source": [
+    "# Analisi di Sensibilità Parametrica: Stress Test Modello LSTM\n",
+    "\n",
+    "Questo report analizza i confini operativi del modello **LSTM Autoencoder** sottoponendolo a perturbazioni di intensità crescente. L'obiettivo è identificare il **\"Tipping Point\"** (punto di rottura), ovvero il valore minimo di anomalia necessario affinché il sistema attivi un allarme (Detection Rate > 95%).\n",
+    "\n",
+    "**Nota sulla Soglia:** La soglia operativa è fissata a **0.027605**. Essendo più alta rispetto ai test precedenti (es. LNN), il modello richiede un errore di ricostruzione maggiore per far scattare l'allarme, risultando meno sensibile alle micro-variazioni.\n",
+    "\n",
+    "### Analisi dei Risultati per Scenario\n",
+    "\n",
+    "#### 1. Teleport (Discontinuità Posizionale)\n",
+    "Test di resistenza a salti improvvisi di coordinate (Lat/Lon) negli ultimi 5 step temporali.\n",
+    "\n",
+    "* **Zona di Silenzio (0.001 - 0.02):** Il detection rate rimane al livello basale del **6.2%**. Il modello assorbe spostamenti fino a 0.02 unità normalizzate trattandoli come rumore o movimenti rapidi leciti.\n",
+    "* **Hard Threshold (0.05):** Si osserva una transizione a gradino (\"Step function\"). Passando da 0.02 a 0.05, il rilevamento balza istantaneamente al **100%**.\n",
+    "* **Conclusione:** Il sistema non presenta una degradazione lineare ma binaria. O il salto è palese ($>0.05$), o viene ignorato.\n",
+    "\n",
+    "#### 2. Speed Spoofing (Rumore su SOG)\n",
+    "Iniezione di rumore gaussiano additivo sul canale della velocità.\n",
+    "\n",
+    "* **Incertezza (0.1):** Con una deviazione standard di 0.1, il modello rileva solo il **32.8%** degli attacchi. L'LSTM riesce ancora a ricostruire una parvenza di sequenza logica.\n",
+    "* **Saturazione (0.2):** A livello 0.2, il tasso sale al **96.9%**.\n",
+    "* **Conclusione:** L'LSTM è molto sensibile alla coerenza della velocità. Basta un rumore moderato (0.2) per rompere la capacità predittiva della rete, rendendo questo attacco facilmente rilevabile.\n",
+    "\n",
+    "#### 3. Silent Drift (Deriva Cumulativa)\n",
+    "Applicazione di una deriva lineare costante ($drift\\_vector = t \\cdot rate$).\n",
+    "\n",
+    "* **Tipping Point (0.003):**\n",
+    "    * Fino a rateo **0.001**, la deriva è invisibile (6.2%).\n",
+    "    * A **0.002**, siamo nella zona di transizione (**48.4%**).\n",
+    "    * A **0.003**, la deriva accumulata lungo la finestra di 30 step genera un errore totale sufficiente a garantire il **100%** di rilevamento.\n",
+    "* **Conclusione:** Il modello dimostra una buona \"memoria\". Anche se lo spostamento per singolo step è infinitesimale, l'integrazione dell'errore temporale permette di rilevare l'anomalia non appena la traiettoria diverge significativamente dalla previsione.\n",
+    "\n",
+    "#### 4. Ghost Ship (Incoerenza Rotta/COG)\n",
+    "Simulazione di un'inversione di rotta ($\\approx 180^\\circ$) con aggiunta di jitter.\n",
+    "\n",
+    "* **Vulnerabilità Critica (Jitter 0.00 - 0.05):**\n",
+    "    * Con inversione di rotta pura (Jitter 0.00), il rilevamento è solo del **12.5%**. Il modello **fallisce** nel riconoscere l'incoerenza semantica (la nave va a Nord ma il COG dice Sud).\n",
+    "    * Anche con Jitter 0.05, il rilevamento è basso (23.4%).\n",
+    "* **Rilevamento del Rumore, non dell'Attacco:**\n",
+    "    * Il tasso supera il 90% solo quando il Jitter raggiunge **0.20**.\n",
+    "* **Conclusione:** L'LSTM non sta rilevando l'attacco \"Ghost Ship\" (inversione di rotta), ma sta rilevando semplicemente il \"rumore\" (Jitter) aggiunto al segnale. Se un attaccante inviasse una rotta invertita ma \"pulita\" (senza jitter), avrebbe l'**87.5% di probabilità di successo**.\n",
+    "\n",
+    "### Sintesi Comparativa\n",
+    "\n",
+    "| Scenario | Soglia di Attivazione (Detection > 95%) | Valutazione Robustezza |\n",
+    "| :--- | :--- | :--- |\n",
+    "| **Teleport** | Salto $\\ge 0.05$ | **Alta** (Risposta Binaria) |\n",
+    "| **Speed Spoofing** | Rumore $\\ge 0.2$ | **Alta** (Molto Sensibile) |\n",
+    "| **Silent Drift** | Rateo $\\ge 0.003$ | **Alta** (Sensibile all'accumulo) |\n",
+    "| **Ghost Ship** | Jitter $\\ge 0.20$ | **Bassa** (Cieco all'inversione pura) |"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "142f0c55",
    "metadata": {},
    "outputs": [
@@ -383,10 +483,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "# Configurazione Soglia Finale\n",
     "FINAL_THRESHOLD = 0.027605\n",
     "\n",
@@ -522,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "182a142b",
    "metadata": {},
    "outputs": [
@@ -583,12 +679,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "\n",
     "# Preparazione Dati per Visualizzazioni\n",
     "# Mappiamo i codici numerici ai nomi leggibili\n",
     "attack_map = {0: 'Normal', 1: 'Speed Spoofing', 2: 'Teleport', 3: 'Ghost Ship', 4: 'Silent Drift'}\n",
