Separazione tra test preliminari attacchi e test finale.

--- a/Progetto/LNN_V2/Test_Fase_Preliminare/Test_Kinematic_Inconcistency.ipynb
+++ b/Progetto/LNN_V2/Test_Fase_Preliminare/Test_Kinematic_Inconcistency.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "62e92c6d",
    "metadata": {},
    "outputs": [
@@ -69,9 +69,9 @@
     "WINDOW_SIZE = 30\n",
     "BATCH_SIZE = 256\n",
     "COLONNE_FEATURES = ['Latitude', 'Longitude', 'SOG', 'COG']\n",
-    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset_Ready_For_AI_FINAL'\n",
-    "SCALER_PATH = 'scaler.joblib'\n",
-    "WEIGHTS_PATH = 'lnn_autoencoder_best.weights.h5'\n",
+    "INPUT_DIR = '../../Pre-Elaborazione Dati/Dataset_Ready_For_AI_FINAL'\n",
+    "SCALER_PATH = '../scaler.joblib'\n",
+    "WEIGHTS_PATH = '../lnn_autoencoder_best.weights.h5'\n",
     "\n",
     "# LNN Params\n",
     "RECURRENT_UNITS = 128\n",
