--- a/Progetto/LNN_V2/Test_Fase_Preliminare/Test_Silent_Drift.ipynb
+++ b/Progetto/LNN_V2/Test_Fase_Preliminare/Test_Silent_Drift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cbc6a33d",
    "metadata": {},
    "outputs": [
@@ -49,9 +49,9 @@
     "WINDOW_SIZE = 30\n",
     "BATCH_SIZE = 256\n",
     "COLONNE_FEATURES = ['Latitude', 'Longitude', 'SOG', 'COG']\n",
-    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset'\n",
-    "SCALER_PATH = 'scaler.joblib'\n",
-    "WEIGHTS_PATH = 'lnn_autoencoder_best.weights.h5'\n",
+    "INPUT_DIR = '../../Pre-Elaborazione Dati/Dataset'\n",
+    "SCALER_PATH = '../scaler.joblib'\n",
+    "WEIGHTS_PATH = '../lnn_autoencoder_best.weights.h5'\n",
     "\n",
     "# LNN Params\n",
     "RECURRENT_UNITS = 128\n",
