--- a/Progetto/LSMT_V2/Test_Fase_Preliminare/Test_Silent_Drift.ipynb
+++ b/Progetto/LSMT_V2/Test_Fase_Preliminare/Test_Silent_Drift.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "cbc6a33d",
    "metadata": {},
    "outputs": [
@@ -61,10 +61,10 @@
     "    except RuntimeError as e:\n",
     "        print(e)\n",
     "\n",
-    "#ATH\n",
-    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset_Ready_For_AI_FINAL' \n",
-    "SCALER_PATH = 'scaler.joblib' \n",
-    "MODEL_PATH = 'lstm_autoencoder_best.keras' \n",
+    "#Path e Costanti\n",
+    "INPUT_DIR = '../../Pre-Elaborazione Dati/Dataset_Ready_For_AI_FINAL' \n",
+    "SCALER_PATH = '../scaler.joblib' \n",
+    "MODEL_PATH = '../lstm_autoencoder_best.keras'  \n",
     "\n",
     "COLONNE_FEATURES = ['Latitude', 'Longitude', 'SOG', 'COG']\n",
     "WINDOW_SIZE = 30  \n",
