--- a/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
+++ b/Progetto/Pre-Elaborazione Dati/Pulizia Data AIS.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4ec05d38",
    "metadata": {},
    "outputs": [],
@@ -2914,7 +2914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cac9ba59",
    "metadata": {},
    "outputs": [
@@ -2922,37 +2922,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 AVVIO AUDIT DEL DATASET (COLUMN NAME FIX)\n",
+      "Avvio analisi dataset:\n",
       "   Target: Dataset_Ready_For_AI_FINAL\n",
       "------------------------------------------------------------\n",
       "[25/25] Analizzato blocco_024-segmentato.parquet (EXTRA)\n",
       "============================================================\n",
-      "📄 DATASET PASSPORT (REPORT FINALE)\n",
+      "Dataset Analysis Report:\n",
       "============================================================\n",
       "\n",
-      "1. DISTRIBUZIONE DATI (Split)\n",
-      "   • TRAIN (0-15):  136,786,489 righe\n",
-      "   • VAL   (16-19): 31,860,181 righe\n",
-      "   • TEST  (20-23): 42,379,530 righe\n",
-      "   • EXTRA (24+):   4,512,098 righe\n",
-      "   --------------------------------------------------\n",
-      "   • TOTALE REALE:  215,538,298 righe\n",
-      "   • NAVI UNICHE:   1,232,449 (ID univoci globali)\n",
+      "DISTRIBUZIONE DATI\n",
+      "    TRAIN (0-15):  136,786,489 righe\n",
+      "    VAL   (16-19): 31,860,181 righe\n",
+      "    TEST  (20-23): 42,379,530 righe\n",
+      "   -------------------------------------------------\n",
+      "    TOTALE REALE:  215,538,298 righe\n",
+      "    NAVI UNICHE:   1,232,449 (ID univoci globali)\n",
       "\n",
-      "2. COERENZA TEMPORALE (La Griglia)\n",
-      "   • Delta 60s (Regolari): 214,299,754\n",
-      "   • Delta Anomali (BUCHI): 0  <-- DEVE ESSERE 0\n",
-      "   ✅ VERIFICA TEMPORALE SUPERATA: Nessun buco interno.\n",
+      " COERENZA TEMPORALE\n",
+      "   Delta 60s (Regolari): 214,299,754\n",
+      "   Delta Anomali (BUCHI): 0\n",
+      "Nessun buco temporale interno trovato.\n",
       "\n",
-      "3. INTEGRITÀ CUCITURE (Passaggio tra file)\n",
-      "   • Errori di continuità: 0\n",
-      "   ✅ CUCITURE PERFETTE.\n",
+      " Integrità cuciture tra file\n",
+      " Errori di continuità: 0\n",
+      "Cuciture tra file perfette\n",
       "\n",
-      "4. FISICA E DENSITÀ\n",
-      "   • Lat: 0.0085 / 80.8467\n",
-      "   • Lon: -179.5020 / 158.9307\n",
-      "   • SOG: Min 2.10, Max 102.30\n",
-      "   • Durata Traj: Min 30m, Max 15829m, Media 174.0m\n",
+      " Statistiche fisiche globali\n",
+      "   Lat: 0.0085 / 80.8467\n",
+      "   Lon: -179.5020 / 158.9307\n",
+      "   SOG: Min 2.10, Max 102.30\n",
+      "   Durata Traj: Min 30m, Max 15829m, Media 174.0m\n",
       "============================================================\n"
      ]
     }
