Correzione titolo grafico 'Efficacia di rilevamento LSMT su 1M di campioni'

--- a/Progetto/LSMT_V2/Final_Test_Attacks.ipynb
+++ b/Progetto/LSMT_V2/Final_Test_Attacks.ipynb
@@ -710,7 +710,7 @@
     "                ha='center', va='bottom', fontsize=14, fontweight='bold', xytext=(0, 5), textcoords='offset points')\n",
     "\n",
     "plt.ylim(0, 115)\n",
-    "plt.title('Efficacia del Rilevamento LNN su 1M di Campioni', pad=20, fontsize=18)\n",
+    "plt.title('Efficacia del Rilevamento LSMT su 1M di Campioni', pad=20, fontsize=18)\n",
     "plt.ylabel('Detection Rate (%)', fontsize=14)\n",
     "plt.xlabel('')\n",
     "plt.axhline(100, color='grey', linestyle='--', alpha=0.5)\n",
