--- a/Progetto/LNN_V2/LNN.ipynb
+++ b/Progetto/LNN_V2/LNN.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "13a65588",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
     "\n",
     "output = TimeDistributed(Dense(n_features))(lnn_decoder)\n",
     "\n",
-    "model_lnn = Model(inputs, output) # Rinominato per evitare confusione\n",
+    "model_lnn = Model(inputs, output)\n",
     "\n",
     "model_lnn.summary()"
    ]
