Considerazione sulla soglia test finale

--- a/Progetto/LNN_V2/Final_Test_Attacks.ipynb
+++ b/Progetto/LNN_V2/Final_Test_Attacks.ipynb
@@ -839,6 +839,170 @@
     "print(\"=\"*80)\n",
     "print(df_summary.to_markdown(index=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d26d9ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU Rilevata: PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')\n",
+      "--- GENERAZIONE TABELLA LNN: AGGRESSIVE vs CONSERVATIVE (500k Samples) ---\n",
+      "Ricostruzione Architettura LNN (Float32 Mode)...\n",
+      "Pesi LNN caricati con successo.\n",
+      "Elaborazione progressiva fino a 1000000 campioni...\n",
+      "Status: 1000054/1000000 campioni elaborati...\n",
+      "Analisi completata su 1000054 campioni.\n",
+      "\n",
+      "================================================================================\n",
+      "ANALISI OPERATIVA FINALE (LNN - Liquid Neural Network)\n",
+      "================================================================================\n",
+      "| Profilo Operativo           |   Soglia (τ) | Detection Rate (Ghost Ship)   | Falsi Positivi (FPR)   | Interpretazione                                                           |\n",
+      "|:----------------------------|-------------:|:------------------------------|:-----------------------|:--------------------------------------------------------------------------|\n",
+      "| Aggressivo (Zero Trust)     |      0.01694 | 99.50%                        | ~4.18%                 | Massima sicurezza (Target: >99.5% Detection). Accetta alti falsi allarmi. |\n",
+      "| Conservativo (Baseline LNN) |      0.02395 | 86.98%                        | ~2.51%                 | Soglia storica LNN (μ + 3σ). Minimizza i falsi positivi.                  |\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Configurazione GPU per LNN\n",
+    "gpus = tf.config.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "    try:\n",
+    "        for gpu in gpus:\n",
+    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "        print(f\"GPU Rilevata: {gpus[0]}\")\n",
+    "    except RuntimeError as e:\n",
+    "        print(e)\n",
+    "\n",
+    "# Parametri Generali\n",
+    "N_SAMPLES = 1000000 \n",
+    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset_Ready_For_AI_FINAL'\n",
+    "SCALER_PATH = 'scaler.joblib'\n",
+    "WEIGHTS_PATH = 'lnn_autoencoder_best.weights.h5' \n",
+    "WINDOW_SIZE = 30\n",
+    "RECURRENT_UNITS = 128\n",
+    "BOTTLENECK_SIZE = 64\n",
+    "GHOST_JITTER = 0.20 \n",
+    "FIXED_THRESH_CONSERVATIVE = 0.023947 \n",
+    "\n",
+    "print(\"Tabella LNN - Definizione Soglie di Rilevamento\")\n",
+    "\n",
+    "# Caricamento Scaler e Modello\n",
+    "if not os.path.exists(SCALER_PATH) or not os.path.exists(WEIGHTS_PATH):\n",
+    "    raise FileNotFoundError(\"Scaler o Pesi non trovati. Controlla i percorsi.\")\n",
+    "\n",
+    "scaler = joblib.load(SCALER_PATH)\n",
+    "features = ['Latitude', 'Longitude', 'SOG', 'COG']\n",
+    "files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
+    "# Costruzione Modello LNN\n",
+    "wiring = AutoNCP(RECURRENT_UNITS, output_size=BOTTLENECK_SIZE)\n",
+    "inputs = Input(shape=(WINDOW_SIZE, 4))\n",
+    "\n",
+    "lnn_encoder = CfC(wiring, return_sequences=False, mixed_memory=True)(inputs)\n",
+    "repeat_vector = RepeatVector(WINDOW_SIZE)(lnn_encoder)\n",
+    "lnn_decoder = CfC(wiring, return_sequences=True, mixed_memory=True)(repeat_vector)\n",
+    "output = TimeDistributed(Dense(4))(lnn_decoder)\n",
+    "\n",
+    "model = Model(inputs, output)\n",
+    "# Caricamento pesi\n",
+    "model.load_weights(WEIGHTS_PATH)\n",
+    "print(\"Pesi LNN caricati con successo.\")\n",
+    "\n",
+    "def make_windows(df, w=30):\n",
+    "    vals = df[features].values\n",
+    "    return np.array([vals[i:i+w] for i in range(len(vals)-w+1)])\n",
+    "\n",
+    "#Mae\n",
+    "mae_normal = []\n",
+    "mae_ghost = []\n",
+    "collected = 0\n",
+    "\n",
+    "print(f\"Elaborazione progressiva fino a {N_SAMPLES} campioni...\")\n",
+    "\n",
+    "for f in files:\n",
+    "    if collected >= N_SAMPLES: break\n",
+    "    try:\n",
+    "        df = pd.read_parquet(f, columns=features + ['TrajectoryID'])\n",
+    "        df[features] = scaler.transform(df[features])\n",
+    "        \n",
+    "        for _, group in df.groupby('TrajectoryID'):\n",
+    "            if len(group) < 30: continue\n",
+    "            \n",
+    "            X = make_windows(group)\n",
+    "            if len(X) == 0: continue\n",
+    "            \n",
+    "            p_norm = model.predict(X, verbose=0, batch_size=256)\n",
+    "            loss_norm = np.mean(np.abs(X - p_norm), axis=(1,2))\n",
+    "            mae_normal.extend(loss_norm)\n",
+    "            \n",
+    "            X_g = X.copy()\n",
+    "            X_g[:, :, 3] = (X_g[:, :, 3] + 0.5) % 1.0 \n",
+    "            X_g[:, :, 3] += np.random.normal(0, GHOST_JITTER, X_g[:, :, 3].shape)\n",
+    "            \n",
+    "            p_ghost = model.predict(X_g, verbose=0, batch_size=256)\n",
+    "            loss_ghost = np.mean(np.abs(X_g - p_ghost), axis=(1,2))\n",
+    "            mae_ghost.extend(loss_ghost)\n",
+    "            \n",
+    "            collected += len(X)\n",
+    "            if collected >= N_SAMPLES: break\n",
+    "            \n",
+    "        print(f\"Status: {collected}/{N_SAMPLES} campioni elaborati...\", end='\\r')\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(f\"Skip file {f}: {e}\")\n",
+    "        continue\n",
+    "\n",
+    "print(f\"\\nAnalisi completata su {len(mae_normal)} campioni.\")\n",
+    "\n",
+    "mae_normal = np.array(mae_normal)\n",
+    "mae_ghost = np.array(mae_ghost)\n",
+    "\n",
+    "#Configurazione soglie\n",
+    "thresh_agg = np.percentile(mae_ghost, 0.5)\n",
+    "thresh_con = FIXED_THRESH_CONSERVATIVE\n",
+    "\n",
+    "# Calcolo metriche \n",
+    "def get_stats(t):\n",
+    "    dr = np.mean(mae_ghost > t) * 100 \n",
+    "    fpr = np.mean(mae_normal > t) * 100 \n",
+    "    return dr, fpr\n",
+    "\n",
+    "dr_agg, fpr_agg = get_stats(thresh_agg)\n",
+    "dr_con, fpr_con = get_stats(thresh_con)\n",
+    "\n",
+    "# Tabella\n",
+    "data = [\n",
+    "    [\n",
+    "        \"Aggressivo (Zero Trust)\", \n",
+    "        f\"{thresh_agg:.5f}\", \n",
+    "        f\"{dr_agg:.2f}%\", \n",
+    "        f\"~{fpr_agg:.2f}%\"\n",
+    "    ],\n",
+    "    [\n",
+    "        \"Conservativo (Baseline LNN)\", \n",
+    "        f\"{thresh_con:.5f}\", \n",
+    "        f\"{dr_con:.2f}%\", \n",
+    "        f\"~{fpr_con:.2f}%\"\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "df_final = pd.DataFrame(data, columns=[\"Profilo Operativo\", \"Soglia (τ)\", \"Detection Rate (Ghost Ship)\", \"Falsi Positivi (FPR)\"])\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"ANALISI OPERATIVA FINALE (LNN - Liquid Neural Network)\")\n",
+    "print(\"=\"*80)\n",
+    "try:\n",
+    "    print(df_final.to_markdown(index=False))\n",
+    "except:\n",
+    "    print(df_final.to_string(index=False))\n",
+    "print(\"=\"*80)"
+   ]
   }
  ],
  "metadata": {
